--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p>Hello</p>
 <p>大家好，这里是 Ai 学习页面</p>
 
-<a href="hemingjun.content.io/learning_1">Learning Content 1</a>
+<a href="hemingjun.content.io/learning_1.html">Learning Content 1</a>
