--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <p>Hello</p>
 <p>大家好，这里是 Ai 学习页面</p>
 
-<a href="hemingjun.content.io/learning_1.html">Learning Content 1</a>
+<ul>
+  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
+</ul>
