--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <p>大家好，这里是 Ai 学习页面</p>
 
 <ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
+  <li> <a href="learning.html">learning 1</a> </li>
 </ul>
