--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <p>大家好，这里是 Ai 学习页面</p>
 
 <ul>
-  <li> <a href="learning.html">learning 1</a> </li>
+  <li> <a href="learning_1.html">万字深度分析！2023年餐饮到底该怎么干？</a> </li>
 </ul>
