--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 
 <ul>
   <li> <a href="learning_1.html">万字深度分析！2023年餐饮到底该怎么干？</a> </li>
+  <li> <a href="加拿大班芙国家公园至尊高尔夫之旅.pdf"> 加拿大班芙国家公园至尊高尔夫之旅 </a></li>
 </ul>
