--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
   <li> <a href="加拿大班芙国家公园至尊高尔夫之旅.pdf"> 加拿大班芙国家公园至尊高尔夫之旅 </a></li>
   <li> <a href="从零开始做餐饮xg.pdf"> 从零开始做餐饮 </a></li>
   <li> <a href="影响力.pdf"> 影响力 </a></li>
+  <li> <a href="海底捞你学不会-黄铁鹰.pdf"> 海底捞你学不会 </a></li>
 </ul>
